--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -51,7 +51,8 @@ jobs:
         git config --global user.email jin492763874@126.com
         git config --global user.name giserd
         git add .
-        git commit -m "update new refresh_token" -a
+        git commit -m "update new refresh_token" 
+        git pull --rebase
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
