--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -9,7 +9,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 0/30 9-17 * * ?'
   watch:
     types: [started]
    
